--- a/experiment1/resources/shared/css/cocolab-style.css
+++ b/experiment1/resources/shared/css/cocolab-style.css
@@ -143,7 +143,7 @@ textarea {
 /* Progress Bar */
 .progress{
   position: absolute;
-  right: 10px;
+  right: 60%;
   top: 10px;
 }
 .progress span{
