--- a/experiment1/resources/shared/css/cocolab-style.css
+++ b/experiment1/resources/shared/css/cocolab-style.css
@@ -19,7 +19,7 @@ table {
 	margin-top: 0px;
 
 	/*all elements in a slide will be centered by default*/
-    text-align: center;
+    text-align: left;
 
     border: 1px solid #04abe3;
     width: 800px;
